<resources>
    <string name="app_name">DigiTable</string>
    <string name="title_activity_add_player">JÁTÉKOSOK MEGADÁSA:</string>
    <string name="title_activity_game">JÁTÉK:</string>
    <string name="title_activity_main">FŐMENÜ</string>
    <string name="textview_player_one">1. JÁTÉKOS NEVE (fehér):</string>
    <string name="textview_player_two">2. JÁTÉKOS NEVE (sárga):</string>
    <string name="textview_team_one">1. CSAPAT JÁTÉKOSAI (fehér):</string>
    <string name="textview_team_two">2. CSAPAT JÁTÉKOSAI (sárga):</string>
    <string name="textview_beginner_player">A JÁTÉKOT KEZDI:</string>
    <string name="textview_copyright">© 2018 Zsolt Csasztvan</string>
    <string name="button_begin_game">JÁTÉK INDÍTÁSA</string>
    <string name="PlyOneEmpty">Töltsd ki az első játékos nevét!</string>
    <string name="PlyTwoEmpty">Töltsd ki a második játékos nevét!</string>
    <string name="BeginnerPlyEmpty">Töltsd ki a játékot kezdő játékos nevét!</string>
    <string name="PlyOneEqualsPlyTwo">A két játékos neve nem lehet megegyező!</string>
    <string name="MessageBoxTitleWarning">Figyelem!</string>
    <string name="NewGameSingle">Eurokegel egyéni játék</string>
    <string name="NewGamePair">Eurokegel páros játék</string>
    <string name="NewGameRelay">Magyarbiliárd staféta játék</string>
    <string name="played_sets">ENNYI NYERT SZETTRE:</string>
    <string name="AddPoint">+</string>
    <string name="RemovePoint">-</string>
    <string name="GiveUp">FELAD</string>
    <string name="NewSet">ÚJ SZETT</string>
    <string name="EmptyString"> </string>
    <string name="dash_sign">-</string>
    <string name="Yes">Igen</string>
    <string name="No">Nem</string>
    <string name="point1">1</string>
    <string name="point2">2</string>
    <string name="point3">3</string>
    <string name="point4">4</string>
    <string name="point5">5</string>
    <string name="point6">6</string>
    <string name="point7">7</string>
    <string name="point8">8</string>
    <string name="point9">9</string>
    <string name="point10">10</string>
    <string name="point11">11</string>
    <string name="point12">12</string>
    <string name="point13">13</string>
    <string name="point14">14</string>
    <string name="point15">15</string>
    <string name="point16">16</string>
    <string name="point17">17</string>
    <string name="point18">18</string>
    <string name="point19">19</string>
    <string name="point20">20</string>
    <string name="point21">21</string>
    <string name="point22">22</string>
    <string name="point23">23</string>
    <string name="point24">24</string>
    <string name="point25">25</string>
    <string name="point26">26</string>
    <string name="point27">27</string>
    <string name="point28">28</string>
    <string name="point29">29</string>
    <string name="point30">30</string>
    <string name="point31">31</string>
    <string name="point32">32</string>
    <string name="point33">33</string>
    <string name="point34">34</string>
    <string name="point35">35</string>
    <string name="point36">36</string>
    <string name="point37">37</string>
    <string name="point38">38</string>
    <string name="add_player">Játékos hozzáadása</string>
    <string name="ok">OK</string>
</resources>
