<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.win_10.eurokegel.PointerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:weightSum="100"
            app:rowCount="5">

            <Button
            android:id="@+id/pointButton1"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="15"
            app:layout_rowWeight="15"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black_border_white"
            android:onClick="PointButtons_OnClick"
            android:text="@string/point1"
            android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton2"
                app:layout_column="2"
                app:layout_row="0"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton3"
                app:layout_column="3"
                app:layout_row="0"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton4"
                app:layout_column="4"
                app:layout_row="0"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton5"
                app:layout_column="5"
                app:layout_row="0"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton6"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton7"
                app:layout_column="2"
                app:layout_row="1"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point7"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton8"
                app:layout_column="3"
                app:layout_row="1"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton9"
                app:layout_column="4"
                app:layout_row="1"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton10"
                app:layout_column="5"
                app:layout_row="1"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point10"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton11"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point11"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton12"
                app:layout_column="2"
                app:layout_row="2"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point12"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton13"
                app:layout_column="3"
                app:layout_row="2"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point13"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton14"
                app:layout_column="4"
                app:layout_row="2"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point14"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton15"
                app:layout_column="5"
                app:layout_row="2"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point15"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton16"
                app:layout_column="0"
                app:layout_row="3"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point16"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton17"
                app:layout_column="2"
                app:layout_row="3"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point17"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton18"
                app:layout_column="3"
                app:layout_row="3"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point18"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton19"
                app:layout_column="4"
                app:layout_row="3"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point19"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton20"
                app:layout_column="5"
                app:layout_row="3"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point20"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton21"
                app:layout_column="2"
                app:layout_row="4"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point21"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton22"
                app:layout_column="4"
                app:layout_row="4"
                app:layout_columnWeight="15"
                app:layout_rowWeight="15"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point22"
                android:textStyle="bold" />

        </android.support.v7.widget.GridLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
