<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.win_10.eurokegel.PointerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="100"
            app:rowCount="4">

            <Button
                android:id="@+id/pointButton2"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton4"
                app:layout_column="1"
                app:layout_row="0"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton6"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton8"
                app:layout_column="1"
                app:layout_row="1"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton10"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point10"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton12"
                app:layout_column="1"
                app:layout_row="2"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point12"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton14"
                app:layout_column="0"
                app:layout_row="3"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point14"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointButton16"
                app:layout_column="1"
                app:layout_row="3"
                app:layout_columnWeight="50"
                app:layout_rowWeight="25"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border_white"
                android:onClick="PointButtons_OnClick"
                android:text="@string/point16"
                android:textStyle="bold" />


        </android.support.v7.widget.GridLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
