<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win_10.eurokegel.AddPlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="100"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerOneName"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="70"
                    android:text="@string/textview_player_one"
                    android:textAlignment="textStart" />

                <Spinner
                    android:id="@+id/choosePlayerOneSpinner"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="30" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="100"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerTwoName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="70"
                    android:text="@string/textview_player_two"
                    android:textAlignment="textStart" />

                <Spinner
                    android:id="@+id/choosePlayerTwoSpinner"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="30"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="100"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginnerPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="70"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview_beginner_player"
                    android:textAlignment="textStart" />

                <Spinner
                    android:id="@+id/chooseBeginnerPlayerSpinner"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/black_border"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="30"/>
            </TableRow>

        <Button
            android:id="@+id/beginGameButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/button_begin_game" />

        <TextView
            android:id="@+id/copyRight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="bottom"
            android:text="@string/textview_copyright"
            android:textAlignment="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
