<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win_10.eurokegel.AddPlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:weightSum="100">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="19"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/playerOneName"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:text="@string/textview_team_one"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/chooseTeamOnePlayerOneSpinner"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:background="@drawable/black_border" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="19"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/playerOneName1"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:text="@string/EmptyString"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/chooseTeamOnePlayerTwoSpinner"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:background="@drawable/black_border" />
        </TableRow>

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="19"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/playerTwoName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="50"
            android:text="@string/textview_team_two"
            android:gravity="center_vertical"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/chooseTeamTwoPlayerOneSpinner"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="50"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:background="@drawable/black_border" />

    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="19"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/playerTwoName1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="50"
                android:text="@string/EmptyString"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/chooseTeamTwoPlayerTwoSpinner"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="25"
                android:textSize="30sp"
                android:gravity="center_vertical"
                android:background="@drawable/black_border" />

        </TableRow>

        <Button
            android:id="@+id/beginGameButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="15"
            android:background="@drawable/black_border_green"
            android:text="@string/button_begin_game" />

        <TextView
            android:id="@+id/copyRight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="bottom"
            android:text="@string/textview_copyright"
            android:textAlignment="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
